--- a/Front/src/style/footer.scss
+++ b/Front/src/style/footer.scss
@@ -1,5 +1,27 @@
-footer{
+@import 'app';
+
+.footer{
     width: 100%;
     height: 200px;
-    background-color: rebeccapurple;
 }
+    .footer.light-theme{
+    @extend .light-theme;
+    background-color: $secondary-background-light;
+  }
+    .footer.dark-theme {
+    @extend .dark-theme;
+    background-color: $secondary-background-dark;
+  }
+  .footer__display{
+    display: flex;
+    flex-direction: column;
+      &__first , &__second{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+      }
+  }
+  // .footer__logo{
+  //   text-align: center;
+  // }
