--- a/Front/src/style/home.scss
+++ b/Front/src/style/home.scss
@@ -1,22 +1,15 @@
 .acceuil{
   background-color: black;
-}
-.container {
   text-align: center;
   padding: 2rem;
-
-  .title {
+  &__title {
     font-size: 2.5rem;
     font-weight: bold;
     margin-bottom: 1rem;
   }
 
-  .description {
+  &__description {
     font-size: 1rem;
     margin-bottom: 1rem;
-  }
-
-  .cta {
-    margin-top: 2rem;
   }
 }
