--- a/Front/src/style/navbar.scss
+++ b/Front/src/style/navbar.scss
@@ -1,5 +1,15 @@
+.nav__display{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+    &__bloc{
+      padding: 15px;
+    }
+}
 nav {
-    background-color: #333;
     padding: 10px;
   }
   
