--- a/Front/src/style/app.scss
+++ b/Front/src/style/app.scss
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 // importer couleur primaire et couleur secondaire  pour modifier la couleur secondaire qui sera c elle de header et footer.
 
@@ -26,3 +28,58 @@ $secondary-background-dark: #393939;
   background-color: $primary-background-dark;
   color: $primary-color-dark;
 }
+
+
+/***
+
+// Variables pour personnaliser les couleurs
+$scrollbar-track-color: #f1f1f1;
+$scrollbar-thumb-color: #888;
+$scrollbar-button-color: #aaa;
+
+// Mixin pour appliquer les styles de barre de défilement
+@mixin custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: $scrollbar-thumb-color $scrollbar-track-color;
+}
+
+// Styles par défaut de la barre de défilement
+@mixin default-scrollbar {
+  scrollbar-width: auto;
+}
+
+// Mixin pour appliquer les styles de boutons de défilement
+@mixin custom-scrollbar-button {
+  scrollbar-button-color: $scrollbar-button-color;
+}
+
+// Mixin pour appliquer les styles des barres de défilement
+@mixin custom-scrollbar-styles {
+  &::-webkit-scrollbar {
+    @include custom-scrollbar;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: $scrollbar-track-color;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $scrollbar-thumb-color;
+  }
+
+  &::-webkit-scrollbar-button {
+    @include custom-scrollbar-button;
+  }
+
+  & {
+    @include default-scrollbar;
+  }
+}
+
+// Exemple d'utilisation
+body {
+  @include custom-scrollbar-styles;
+}
+
+
+***/
