--- a/Front/src/style/footer.scss
+++ b/Front/src/style/footer.scss
@@ -2,7 +2,22 @@
 
 .footer{
     width: 100%;
-    height: 200px;
+    height: 250px;
+    // position: absolute;
+    // bottom: 0px;
+    // margin-top: auto;
+    &__display{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+        &__first , &__second{
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-around;
+        }
+      } 
 }
     .footer.light-theme{
     @extend .light-theme;
@@ -12,16 +27,7 @@
     @extend .dark-theme;
     background-color: $secondary-background-dark;
   }
-  .footer__display{
-    display: flex;
-    flex-direction: column;
-      &__first , &__second{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-      }
-  }
+
   // .footer__logo{
   //   text-align: center;
   // }
